Fixes #1056 : Align text with thumbnail in create badges

--- a/frontend/app/templates/components/background-component/def-image-component.hbs
+++ b/frontend/app/templates/components/background-component/def-image-component.hbs
@@ -6,8 +6,10 @@
         <div class="menu">
             {{#each defImages as |image|}}
                 <div data-value="{{image.id}}" class="item">
-                    <img class="ui mini image" src="/assets/images/badge_backgrounds/{{image.name}}{{fingerPrint}}.png">
-                    {{image.name}}
+                    <div class="ui grid">
+                        <div class="twelve wide column">{{image.name}}</div>
+                        <div class="four wide column"><img class="ui mini image" src="/assets/images/badge_backgrounds/{{image.name}}{{fingerPrint}}.png"></div>
+                    </div>
                 </div>
             {{/each}}
         </div>
