Fixes #1066 : removes exclaimation marks

--- a/frontend/app/templates/components/forms/login-form.hbs
+++ b/frontend/app/templates/components/forms/login-form.hbs
@@ -5,7 +5,7 @@
                 <div class="column">
                     <h1 class="ui orange header">
                         Welcome
-                        <div class="sub header">Lets make some badges!</div>
+                        <div class="sub header">Lets make some badges</div>
                     </h1>
                     <div class="ui hidden divider"></div>
                     <form class="ui form" {{ action 'logIn' 'password' on="submit" }}>
