--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -4,7 +4,7 @@
             <div class="row" >
                 <div class="column">
                     <h1 class="ui orange header">
-                        Sign up for Badgeyay !
+                        Sign up for Badgeyay
                         <div class="sub header">We’re happy helping you get beautiful name badges.</div>
                     </h1>
                     <div class="ui hidden divider"></div>
