--- a/frontend/app/styles/partials/pricing.scss
+++ b/frontend/app/styles/partials/pricing.scss
@@ -1,56 +1,51 @@
+$bullet-color: #6b6666;
+$heading-alpha-color: #383535;
+$heading-bravo-color: #444141;
+$border-color: #bebbbb;
+$price-color: #686565;
+
 .wrapper {
-  margin-top: 10px;
+  margin-top: 20px;
 
   .heading-alpha {
+    color: $heading-alpha-color;
     font-size: 40px;
+    font-weight: 200;
     text-align: center;
   }
 }
 
 .pdf-div {
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 
   .pdf-img {
     height: 60px;
   }
 }
 
-.icon-pdf {
-  border-bottom: 1px dotted;
-  float: left;
+.icon-pdf .shipped {
   margin-bottom: 10px;
-  margin-left: 28%;
-  text-align: center;
-  width: 20%;
 
   .bullets {
-    font-size: 20px;
+    color: $bullet-color;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 1px;
     list-style: none;
-    text-align: center;
   }
 }
 
 .heading-bravo {
-  font-size: 25px;
-}
-
-.shipped {
-  border-bottom: 1px dotted;
-  float: right;
-  margin-bottom: 10px;
-  margin-right: 28%;
-  text-align: center;
-  width: 20%;
-
-  .bullets {
-    font-size: 20px;
-    list-style: none;
-    text-align: center;
-  }
+  color: $heading-bravo-color;
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  margin-bottom: 40px;
+  text-transform: uppercase;
 }
 
 .grp-div {
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 
   .grp-img {
     height: 60px;
@@ -58,23 +53,47 @@
 }
 
 .cb-price {
+  color: $price-color;
   margin-bottom: 30px;
   margin-top: 30px;
   text-align: center;
 
+  .cb-price-tag {
+    font-weight: 200;
+  }
+
   .cb-price-number {
-    font-size: 30px;
+    font-size: 65px;
+    font-weight: 100;
   }
 
   .cb-price-label {
-    font-size: 25px;
+    font-size: 30px;
+    font-weight: 300;
   }
 
   .coming-soon {
-    font-size: 20px;
+    color: $price-color;
+    font-size: 25px;
+    font-weight: 300;
+    margin-bottom: 50px;
+  }
+}
 
-    .cap-coming-soon {
-      font-size: 25px;
-    }
+@media only screen and (max-width: 768px) {
+  .border-left {
+    border-top: 1px solid $border-color;
+    left: 20%;
+    position: absolute;
+    right: 20%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .border-left {
+    border-right: 1px solid $border-color;
+    bottom: 20%;
+    position: absolute;
+    top: 20%;
   }
 }
