--- a/frontend/app/templates/components/pricing-component.hbs
+++ b/frontend/app/templates/components/pricing-component.hbs
@@ -1,44 +1,54 @@
 <div class="ui content">
 
-  <div class="wrapper">
-    <p class="heading-alpha">Pricing</p>
-    <div class="inline-columns">
-      <div class="inline-column pdf icon-pdf">
-        <div class="pdf-div">
-          <img class="pdf-img" src="/images/pdf-icon.png">
-        </div>
-        <span class="heading-bravo">You print <span>the generated PDF</span></span>
-        <div class="cb-price">
-          <span class="cb-price-tag">$</span>
-          <span class="cb-price-number">0.00</span>
-          <span>for </span><span class="cb-price-label">200</span><span> badges</span>
-        </div>
-        <ul class="bullets">
-          <li>Customize the font for your badges</li>
-          <li>Upload images for your badges</li>
-          <li>Available in different paper sizes A3, A4 etc</li>
-        </ul>
-      </div>
-      <div class="inline-column shipped icon-box">
-        <div class="grp-div">
-          <img class="grp-img" src="/images/group-icon.png">
-        </div>
-        <span class="heading-bravo">Ran out of 200 badges?</span>
-          <div class="pricing-printed-4x3">
-            <div class="cb-price">
-              <span class="coming-soon"><span class="cap-coming-soon">C</span>oming <span class="cap-coming-soon">S</span>oon</span>
+    <div class="wrapper">
+        <br>
+        <br>
+        <p class="heading-alpha">Pricing</p>
+        <br>
+        <div class="inline-columns">
+            <div class="ui stackable two column grid container center aligned">
+                <div class="column">
+                    <div class="pdf icon-pdf">
+                        <div class="pdf-div">
+                            <img class="pdf-img" src="/images/pdf-icon.png">
+                        </div>
+                        <div class="heading-bravo">You print the generated PDF</div>
+                        <div class="cb-price">
+                            <span class="cb-price-tag">$</span>
+                            <span class="cb-price-number">0.00</span>
+                            <span>for </span>
+                            <span class="cb-price-label">200</span>
+                            <span> badges</span>
+                        </div>
+                        <div class="ui list">
+                            <div class="item">Customize the font for your badges</div>
+                            <div class="item">Upload images for your badges</div>
+                            <div class="item">Available in different paper sizes A3, A4 etc</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="border-left"></div>
+                    <div class="shipped icon-box">
+                        <div class="grp-div">
+                            <img class="grp-img" src="/images/blog.png">
+                        </div>
+                        <div class="heading-bravo">Ran out of 200 badges?</div>
+                        <div class="cb-price">
+                            <div class="coming-soon">
+                                Coming Soon
+                            </div>
+                        </div>
+                        <div class="ui list">
+                            <div class="item">Get access to premium features and services</div>
+                            <div class="item">More badges for your events and meets</div>
+                            <div class="item">Customize your badges the way you like</div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <ul class="bullets">
-            <li>Get access to premium features and services</li>
-            <li>More badges for your events and meets</li>
-            <li>Customize your badges the way you like</li>
-          </ul>
-      </div>
+        </div>
+        <br>
+        <br>
     </div>
-
-    <div>
-    </div>
-  </div>
-
 </div>
