Fixes #1069 : Displaying all user in frontend

--- a/frontend/app/styles/partials/admin.scss
+++ b/frontend/app/styles/partials/admin.scss
@@ -1,3 +1,12 @@
 .admin-top-margin {
   margin: 15% auto;
 }
+
+.ui.fluid.card.usercard {
+  margin: 8px;
+  padding: 8px;
+}
+
+.column.align-center {
+  text-align: center;
+}
