Changed UI of Footer

--- a/frontend/app/styles/partials/all.scss
+++ b/frontend/app/styles/partials/all.scss
@@ -1,5 +1,4 @@
 @import "welcome";
-@import "footer";
 @import "overrides";
 @import "notifications";
 @import "profile";
@@ -12,3 +11,4 @@
 @import "user-guide";
 @import "pricing";
 @import "admin";
+@import "application";
