--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -4,7 +4,7 @@
       {{welcome-header session=session}}
       {{pricing-component}}
     {{/if}}
-    <div class="ui container">
+    <div class="ui container main-container">
         {{outlet}}
     </div>
     {{footer-main}}
