--- a/frontend/app/templates/components/footer-main.hbs
+++ b/frontend/app/templates/components/footer-main.hbs
@@ -1,5 +1,5 @@
-<div class="ui center aligned container">
-    <div class="ui bottom fixed inverted menu">
+<footer>
+    <div class="ui bottom inverted menu">
         <div class="left menu">
             <a class="item" href="#" target="_blank">Sitemap</a>
         </div>
@@ -9,4 +9,4 @@
             <a class="item" href="https://github.com/fossasia/badgeyay" target="_blank">Github</a>
         </div>
     </div>
-</div>
+</footer>
