--- a/frontend/app/templates/components/welcome-header.hbs
+++ b/frontend/app/templates/components/welcome-header.hbs
@@ -1,6 +1,6 @@
 <div class="ui content">
   <div>
-    <h1 class="weight-300 lead">The simplest way to create Badges.</h1>
+    <h1 class="lead">The simplest way to create badges.</h1>
   </div>
   {{#if session.isAuthenticated}}
   {{#link-to 'create-badges'}}
