--- a/frontend/app/styles/partials/overrides.scss
+++ b/frontend/app/styles/partials/overrides.scss
@@ -9,23 +9,50 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 720px;
+  margin: $page-top-margin 0;
+  padding: 2%;
+}
+
+@media screen and (max-width: 1500px) {
+  .main-container {
+    margin: 2% 0;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .main-container {
+    margin: 3% 0;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .main-container {
+    margin: 4% 0;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .main-container {
+    margin: 6% 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .main-container {
+    margin: 8% 0;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .main-container {
+    margin: 10% 0;
+  }
 }
 
 .max-width {
   width: 100%;
 }
 
-.my-badge-width {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1000px;
-}
 
 .ui.container {
   margin-bottom: 20px;
