--- a/frontend/app/styles/partials/welcome.scss
+++ b/frontend/app/styles/partials/welcome.scss
@@ -20,7 +20,7 @@ $color4: #ffa500;
     top: 25vh;
 
     .lead {
-      font-size: 65px;
+      font-size: 5em;
       text-shadow: 0 1px 2px $color2;
     }
 
@@ -30,8 +30,50 @@ $color4: #ffa500;
     }
 
     .button {
-      font-size: 18px;
+      font-size: 1.5em;
       margin-top: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 1800px) {
+  .welcome-header {
+    .content {
+      .lead {
+        font-size: 3.5em;
+      }
+
+      .button {
+        font-size: 1.2em;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .welcome-header {
+    .content {
+      .lead {
+        font-size: 3em;
+      }
+
+      .button {
+        font-size: 1.1em;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .welcome-header {
+    .content {
+      .lead {
+        font-size: 2.2em;
+      }
+
+      .button {
+        font-size: 1em;
+      }
     }
   }
 }
