--- a/frontend/app/styles/partials/welcome.scss
+++ b/frontend/app/styles/partials/welcome.scss
@@ -21,7 +21,7 @@ $color4: #ffa500;
     vertical-align: center;
 
     .lead {
-      font-size: 3.5rem;
+      font-size: 4em;
       font-weight: 300 !important;
       text-shadow: 0 1px 2px $color2;
     }
