Corrected the Position of Tooltip

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -121,7 +121,7 @@
                 {{/ui-accordion}}
             </div>
         </div>
-        <button {{action "submitForm"}} class="ui fluid button">Create Badges</button>
+        <button {{action "submitForm"}} class="ui fluid orange button">Create Badges</button>
         {{#if badgeGenerated}}
         <div class="ui floating positive message">
             <div class="header">
