Fixed Position of all components

--- a/frontend/app/styles/partials/forgotpwd.scss
+++ b/frontend/app/styles/partials/forgotpwd.scss
@@ -1,9 +1,11 @@
 .forgot-password {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20%;
   max-width: 480px;
   padding: 10px;
+  position: relative;
+  text-align: center;
+  top: 40px;
 }
 
 .reset-password {
