--- a/frontend/app/templates/components/forgot-password.hbs
+++ b/frontend/app/templates/components/forgot-password.hbs
@@ -1,11 +1,11 @@
-<div class="ui hidden divider"></div>
 <div class="forgot-password">
-    <div class="ui segment">
+    <div class="ui raised segment">
         <div class="ui centered grid">
             <div class="row">
                 <form class="ui fluid form">
                     <div class="required field">
                         <label>Please Enter Your Registered Email</label>
+                        <div class="ui hidden divider"></div>
                         {{input name="email" value=email placeholder="Email" type="email"}}
                     </div>
                     <div class="ui animated button orange" onclick={{action 'sendResetMail'}} tabindex="0">
