--- a/frontend/app/templates/admin/users.hbs
+++ b/frontend/app/templates/admin/users.hbs
@@ -1,1 +1,12 @@
-{{outlet}}
+<div class="ui grid stackable">
+    <div class="row">
+        <div class="sixteen wide column">
+            {{#tabbed-navigation isNonPointing=true}} {{#link-to 'admin.users.list' 'all' class='item'}} All Users {{/link-to}}
+            {{#link-to 'admin.users.list' 'active' class='item'}} Active Users {{/link-to}} {{#link-to 'admin.users.list'
+            'deleted' class='item'}} Deleted Users {{/link-to}} {{/tabbed-navigation}}
+        </div>
+    </div>
+    <div class="row">
+        {{outlet}}
+    </div>
+</div>
