--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div class="pusher">
-    {{nav-bar session=session logOut=(action 'logOut')}}
+    {{nav-bar session=session authToken=authToken logOut=(action 'logOut')}}
     {{#if (eq currentRouteName 'index')}}
       {{welcome-header session=session}}
       {{pricing-component}}
