--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -9,10 +9,15 @@
                 <div class="menu profile-dropdown-menu">
                     {{#link-to 'create-badges' class="large item navbar-dropdown upper"}}
                         Create Badges
-                    {{/link-to}} 
+                    {{/link-to}}
                     {{#link-to 'my-badges' class="large item navbar-dropdown upper"}}
                         My Badges
                     {{/link-to}}
+                    {{#if authToken.adminValid}}
+                    {{#link-to 'admin' class="large item navbar-dropdown upper"}}
+                        Admin
+                    {{/link-to}}
+                    {{/if}}
                     {{#link-to 'my-profile' class="large item navbar-dropdown upper"}}
                         Settings
                     {{/link-to}}
@@ -20,10 +25,10 @@
                     <a class="large item navbar-dropdown upper" {{action 'logOut'}}>Logout</a>
                 </div>
             {{/ui-dropdown}}
-        {{else}} 
+        {{else}}
             {{#link-to 'login'}}
                 <div class="right item ui button" style="text-transform: uppercase; font-weight: 400; line-spacing: 0.5px; line-height: 30px">Login</div>
-            {{/link-to}} 
+            {{/link-to}}
         {{/if}}
         {{#if session.isAuthenticated}}
           {{#link-to 'create-badges' class='item ui orange text'}}
@@ -34,6 +39,6 @@
                 CREATE BADGE
             {{/link-to}}
         {{/if}}
-            
+
     </div>
 </div>
