--- a/frontend/app/templates/components/forms/login-form.hbs
+++ b/frontend/app/templates/components/forms/login-form.hbs
@@ -1,67 +1,66 @@
-<div class="login">
-    <div class="ui stackable column doubling centered grid">
-        <div class="ui middle aligned center aligned grid">
-            <div class="row" >
-                <div class="column">
-                    <h1 class="ui orange header">
-                        Welcome
-                        <div class="sub header">Lets make some badges</div>
-                    </h1>
-                    <div class="ui hidden divider"></div>
-                    <form class="ui form" {{ action 'logIn' 'password' on="submit" }}>
-                        <div class="ui stacked element">
-                            <div class="field required">
-                                <div class="ui left icon input">
-                                    <i class="mail icon"></i>
-                                    {{input type="text" value=email name="email" placeholder="E-mail address"}}
-                                </div>
-                            </div>
-                            <div class="field required">
-                                <div class="ui left icon input">
-                                    <i class="lock icon"></i>
-                                    {{input type="password" value=password name="password" placeholder="Password"}}
-                                </div>
-                            </div>
-                            <button class="ui button orange fluid" style="margin-bottom: 10px;" type="submit">Log In</button>
-                            <a href="{{href-to 'forgotpwd'}}" class="text muted"> Forgot password</a>
-                            <div class="ui divider"></div>
-                            <a href="{{href-to 'signup'}}" class="text muted weight-800">Create an Account</a>
-                        </div>
-                    </form>
-                    <div class="ui horizontal divider">
-                        Or
-                    </div>
-                    <h1 class="ui header">
-                        <div class="sub header">Login with</div>
-                    </h1>
-                </div>
-            </div>
-            <div class="three column row">
-                <div class="column">
-                    <div class="ui vertical animated red button fluid" {{ action 'logIn' 'google' }}>
-                        <div class="hidden content">Google</div>
-                        <div class="visible content">
-                            <i class="google plus icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="ui vertical animated violet button fluid" tabindex="0" {{ action 'logIn' 'facebook' }}>
-                        <div class="hidden content">Facebook</div>
-                        <div class="visible content">
-                            <i class="facebook f icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="ui vertical animated blue button fluid" tabindex="0" {{ action 'logIn' 'twitter' }}>
-                        <div class="hidden content">Twitter</div>
-                        <div class="visible content">
-                            <i class="twitter icon"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<div class="ui stackable three column doubling centered grid login">
+<div class="column">
+  <form class="ui large form" autocomplete="off" {{ action 'logIn' 'password' on="submit" }}>
+    <div class="ui aligned segment basic form-div">
+      <span class="form-title">Welcome</span>
+      <div></div>
+      <span class="form-subtitle">Lets make some badges</span>
     </div>
+    <div class="ui segments no-border">
+      <div class="ui segment">
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="mail icon"></i>
+            {{input name='email' placeholder='Email ID' value=identification}}
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            {{input type='password' name='password' placeholder='Password' value=password}}
+          </div>
+        </div>
+        <div class="ui center aligned segment basic">
+          <button type="submit" class="ui fluid large submit orange basic button">
+            Login
+          </button>
+          <div class="div-links">
+            <a href="{{href-to 'forgotpwd'}}" class="text muted links"> Forgot your password ?</a>
+          </div>
+          <div class="ending-border"></div>
+          <div class="div-links">
+            <a href="{{href-to 'signup'}}" class="ui center aligned text muted weight-800 links">
+              New to site? Create Account
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+  <div class="column oauth-methods">
+    <div class="ui segment basic center aligned">
+      <div class="mobile hidden login-with-fb"> </div>
+      <div class="ui vertical buttons oauth-buttons">
+        <div class="buttons">
+          <button type="button" class="ui google plus button capital large-oauth" {{ action 'logIn' 'google' }}>
+            <i class="google plus icon o-icon"></i>
+            <span class="log-text">Login with Google +</span>
+          </button>
+        </div>
+        <div class="buttons">
+          <button type="button" class="ui facebook button capital large-oauth" {{ action 'logIn' 'facebook' }}>
+            <i class="facebook icon o-icon"></i>
+            <span class="log-text">Login with Facebook</span>
+          </button>
+        </div>
+        <div class="buttons">
+          <button type="button" class="ui twitter button capital large-oauth" {{ action 'logIn' 'twitter' }}>
+            <i class="twitter icon o-icon"></i>
+            <span class="log-text">Login with Twitter</span>
+          </button> 
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
