--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -1,46 +1,48 @@
-<div class="signup">
-    <div class="ui stackable column doubling centered grid">
-        <div class="ui middle aligned center aligned grid">
-            <div class="row" >
-                <div class="column">
-                    <h1 class="ui orange header">
-                        Sign up for Badgeyay
-                        <div class="sub header">We’re happy helping you get beautiful name badges.</div>
-                    </h1>
-                    <div class="ui hidden divider"></div>
-                    <form class="ui form" onsubmit={{action 'signUp'}}>
-                        <div class="ui stacked element">
-                            <div class="field required">
-                                <div class="ui left icon input">
-                                    <i class="mail icon"></i>
-                                    {{input type="text" value=email name="email" placeholder="E-mail address"}}
-                                </div>
-                            </div>
-                            <div class="field required">
-                                <div class="ui left icon input">
-                                    <i class="user icon"></i>
-                                    {{input type="text" value=username name="username" placeholder="Username"}}
-                                </div>
-                            </div>
-                            <div class="field required">
-                                <div class="ui left icon input">
-                                    <i class="lock icon"></i>
-                                    {{input type="password" value=password name="password" placeholder="Password"}}
-                                </div>
-                            </div>
-                            <div class="field required">
-                                <div class="ui left icon input">
-                                    <i class="lock icon"></i>
-                                    {{input type="password" name="password_repeat" placeholder="Re-enter Password"}}
-                                </div>
-                            </div>
-                            <button class="ui fluid large orange submit button" style="margin-bottom: 10px;" type="submit">Sign Up</button>
-                            <div class="ui divider"></div>
-                            <a href="{{href-to 'login'}}" class="text muted weight-800">Already have an account? Log in</a>
-                        </div>
-                    </form>
+<div class="ui stackable three column doubling centered grid signup">
+<div class="column">
+    <form class="ui form" onsubmit={{action 'signUp'}}>
+        <div class="ui aligned segment basic form-div">
+          <span class="form-title">Registeration Form</span>
+          <div></div>
+          <span class="form-subtitle">Sign up today</span>
+        </div>
+        <div class="ui stacked element">
+            <div class="field required">
+                <div class="ui left icon input">
+                    <i class="mail icon"></i>
+                    {{input type="text" value=email name="email" placeholder="E-mail address"}}
+                </div>
+            </div>
+            <div class="field required">
+                <div class="ui left icon input">
+                    <i class="user icon"></i>
+                    {{input type="text" value=username name="username" placeholder="Username"}}
+                </div>
+            </div>
+            <div class="field required">
+                <div class="ui left icon input">
+                    <i class="lock icon"></i>
+                    {{input type="password" value=password name="password" placeholder="Password"}}
+                </div>
+            </div>
+            <div class="field required">
+                <div class="ui left icon input">
+                    <i class="lock icon"></i>
+                    {{input type="password" name="password_repeat" placeholder="Re-enter Password"}}
+                </div>
+            </div>
+            <div class="ui center aligned segment basic">
+                <button class="ui fluid large submit orange basic button" style="margin-bottom: 10px;" type="submit">
+                    Sign Up
+                </button>
+                <div class="ending-border"></div>
+                <div class="div-links">
+                    <a href="{{href-to 'login'}}" class="ui center aligned text muted weight-800 links">
+                      Already a user? Log in
+                    </a>
                 </div>
             </div>
         </div>
-    </div>
+    </form>
+</div>
 </div>
