Made the create badges uniform with new UI

--- a/frontend/app/styles/partials/create-badge.scss
+++ b/frontend/app/styles/partials/create-badge.scss
@@ -1,6 +1,8 @@
 .create-badge {
   position: relative;
-  top: -60px;
+  padding-left: 6%;
+  padding-right: 6%;
+  top: -50px;
 }
 
 .overlay-loader {
