--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -7,7 +7,7 @@
             <div class="ui form width-container">
                 <p>
                     <b>Select from one of the Input Sources</b>
-                    <a class="ui icon orange button guide" href="{{href-to 'user-guide'}}" data-tooltip="User Input Guide" data-position="right center"><i class="info icon"></i></a>
+                    <a class="ui icon orange basic button guide" href="{{href-to 'user-guide'}}" data-tooltip="User Input Guide" data-position="right center"><i class="info icon"></i></a>
                 </p>
                 {{#ui-accordion class="styled fluid"}}
                 <div class="title" onclick={{action "csvClicked"}}>
