Fixes #1110 : Added permission tab and admin index

--- a/frontend/app/templates/admin.hbs
+++ b/frontend/app/templates/admin.hbs
@@ -7,6 +7,9 @@
       {{#link-to 'admin.users' class='item'}}
         {{'Users'}}
       {{/link-to}}
+      {{#link-to 'admin.permissions' class='item'}}
+        {{'Permissions'}}
+      {{/link-to}}
       {{#link-to 'admin.mail' class='item'}}
         {{'Mail'}}
       {{/link-to}}
