--- a/frontend/app/templates/admin/index.hbs
+++ b/frontend/app/templates/admin/index.hbs
@@ -1,1 +1,95 @@
-{{outlet}}
+<div class="ui stackable grid">
+    <div class="row">
+        <div class="center aligned column">
+            <h5 class="ui sub header">
+                Version 2.0
+            </h5>
+        </div>
+    </div>
+    <div class="row">
+        <div class="five wide column">
+            <div class="ui center aligned fluid segment">
+                <h3 class="ui left aligned header">
+                    Badges
+                </h3>
+                <div class="ui divider"></div>
+                <h3 class="ui header">
+                    Number of Badges Generated
+                </h3>
+                <div class="ui small statistic">
+                    <div class="label">
+                        Created
+                    </div>
+                    <div class="value">
+                        <div class="ui teal label">
+                            {{model.allBadge.cnt}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="six wide column">
+            <div class="ui fluid center aligned segment">
+                <h3 class="ui left aligned header">
+                    Messages
+                </h3>
+                <div class="ui divider"></div>
+                <h3 class="ui header">
+                    No. of Sent Mails
+                </h3>
+                <table class="ui celled table">
+                    <tbody>
+                        <tr>
+                            <td> In last 24 hours</td>
+                            <td class="right aligned">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>In last 3 days</td>
+                            <td class="right aligned">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td> In last 7 days </td>
+                            <td class="right aligned">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td> In last 1 month </td>
+                            <td class="right aligned">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="five wide column">
+            <div class="ui center aligned fluid segment">
+                <h3 class="ui left aligned header">
+                    Users
+                </h3>
+                <div class="ui divider">
+                </div>
+                <h3 class="ui header">
+                    System Roles
+                </h3>
+                <table class="ui celled table">
+                    <tbody>
+                        <tr>
+                            <td> No. of Super Admins</td>
+                            <td class="right aligned">{{model.users.superAdmin}}</td>
+                        </tr>
+                        <tr>
+                            <td> No. of Registered Users</td>
+                            <td class="right aligned">{{model.users.registered}}</td>
+                        </tr>
+                        <tr>
+                            <td> No. of Total Users</td>
+                            <td class="right aligned">{{model.users.total}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
