--- a/frontend/app/styles/partials/forgotpwd.scss
+++ b/frontend/app/styles/partials/forgotpwd.scss
@@ -1,17 +1,18 @@
-.forgot-password {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 480px;
-  padding: 10px;
+$colorlinks: #33587d;
+
+
+.reset {
   position: relative;
   text-align: center;
-  top: 40px;
+  top: 100px;
 }
 
-.reset-password {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 18%;
-  max-width: 480px;
-  padding: 10px;
+.form-div {
+  text-align: center;
+
+  .form-title {
+    color: $colorlinks;
+    font-size: 20px;
+    font-weight: 300;
+  }
 }
