--- a/frontend/app/templates/components/forgot-password.hbs
+++ b/frontend/app/templates/components/forgot-password.hbs
@@ -1,21 +1,19 @@
-<div class="forgot-password">
-    <div class="ui raised segment">
-        <div class="ui centered grid">
-            <div class="row">
-                <form class="ui fluid form">
-                    <div class="required field">
-                        <label>Please Enter Your Registered Email</label>
-                        <div class="ui hidden divider"></div>
-                        {{input name="email" value=email placeholder="Email" type="email"}}
-                    </div>
-                    <div class="ui animated button orange" onclick={{action 'sendResetMail'}} tabindex="0">
-                        <div class="visible content">Send Reset Mail</div>
-                        <div class="hidden content">
-                            <i class="right arrow icon"></i>
-                        </div>
-                    </div>
-                </form>
+<div class="ui stackable four column centered grid reset">
+    <div class="column">
+        <form class="ui fluid form">
+            <div class="required field form-div">
+                <div class="form-title">Forgot Password</div>
+                <div class="ui hidden divider"></div>
+                {{input name="email" value=email placeholder="Email" type="email"}}
             </div>
-        </div>
+            <div class="ui center aligned segment basic">
+                <div class="ui animated basic button large orange" onclick={{action 'sendResetMail'}} tabindex="0">
+                    <div class="visible content">Send Email</div>
+                    <div class="hidden content">
+                        <i class="right arrow icon"></i>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
