Modifies Reset Password Form according to new UI

--- a/frontend/app/templates/components/password-comp.hbs
+++ b/frontend/app/templates/components/password-comp.hbs
@@ -1,22 +1,18 @@
-<div class="ui hidden divider"></div>
-<div class="reset-password">
-    <div class="ui segment">
-        <div class="ui centered grid">
-            <div class="row">
-                <div class="column">
-                    <form class="ui fluid form">
-                        <div class="required field">
-                            <label>Enter password</label>
-                            {{input name="password" value=pwd placeholder="New Password" type="password"}}
-                        </div>
-                        <div class="required field">
-                            <label>Confirm password</label>
-                            {{input name="password_repeat" value=confirmPwd placeholder="Confirm Password" type="password"}}
-                        </div>
-                        <button class="ui fluid button blue" type="submit" onclick={{action 'sendPwd'}}>Reset Password</button>
-                    </form>
-                </div>
+<div class="ui stackable centered grid reset-pass">
+    <div class="column">
+        <form class="ui fluid form">
+            <div class="required field div">
+                <div class="title">Reset Password</div>
+                <div class="ui hidden divider"></div>
+                {{input name="password" value=pwd placeholder="New Password" type="password"}}
             </div>
-        </div>
+            <div class="required field div">
+                <div class="ui hidden divider"></div>
+                {{input name="password_repeat" value=confirmPwd placeholder="Confirm Password" type="password"}}
+            </div>
+            <div class="ui center aligned segment basic">
+                <button class="ui basic large orange button" type="submit" onclick={{action 'sendPwd'}}>Reset</button>
+            </div>
+        </form>
     </div>
 </div>
