Removed Badge Generation message and corrected typo

--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -2,7 +2,7 @@
 <div class="column">
     <form class="ui form" onsubmit={{action 'signUp'}}>
         <div class="ui aligned segment basic form-div">
-          <span class="form-title">Registeration Form</span>
+          <span class="form-title">Registration Form</span>
           <div></div>
           <span class="form-subtitle">Sign up today</span>
         </div>
