--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -122,18 +122,8 @@
             </div>
         </div>
         <button {{action "submitForm"}} class="ui fluid orange button">Create Badges</button>
-        {{#if badgeGenerated}}
-        <div class="ui floating positive message">
-            <div class="header">
-                Badge generated successfully
-            </div>
-            <p>Visit this
-                <b>
-                    <a href="{{genBadge.download_link}}">link</a>
-                </b> to download badge</p>
-        </div>
-        {{/if}} {{#each userError as |error|}}
-        <p>{{error.message}}</p>
+        {{#each userError as |error|}}
+            <p>{{error.message}}</p>
         {{/each}}
     {{/if}}
 </div>
