--- a/frontend/app/templates/components/forgot-password.hbs
+++ b/frontend/app/templates/components/forgot-password.hbs
@@ -1,18 +1,13 @@
 <div class="ui stackable four column centered grid reset">
     <div class="column">
-        <form class="ui fluid form">
+        <form class="ui fluid form" {{ action 'sendResetMail' on="submit" }}>
             <div class="required field form-div">
                 <div class="form-title">Forgot Password</div>
                 <div class="ui hidden divider"></div>
                 {{input name="email" value=email placeholder="Email" type="email"}}
             </div>
             <div class="ui center aligned segment basic">
-                <div class="ui animated basic button large orange" onclick={{action 'sendResetMail'}} tabindex="0">
-                    <div class="visible content">Send Email</div>
-                    <div class="hidden content">
-                        <i class="right arrow icon"></i>
-                    </div>
-                </div>
+                <button type="submit" class="ui centered basic button large orange">Send Email</button>                
             </div>
         </form>
     </div>
