--- a/frontend/app/templates/components/overlay-welcome.hbs
+++ b/frontend/app/templates/components/overlay-welcome.hbs
@@ -1,24 +1,44 @@
 {{#if user.ftl}}
 <div class="overlay-{{visibility}}">
     <div class="ui segment center-place">
-        <div class="ui centered grid">
+        <div class="ui stackable centered grid">
             <div class="row">
                 <img class="ui circular small image" src="{{user.photoURL}}">
             </div>
             <div class="row">
-                <p class="welcome-text">Welcome {{user.username}} to Badgeyay. Let's create some awesome badges.
-                    <br>
-                    <br> Please follow steps mentioned to generate badges:
-                    <br> Step 1 : Select from one of the Input Sources
-                    <br> Step 2 : Select Badge Size
-                    <br> Step 3 : Select from one of the background sources
-                    <br> Step 4 : Choose from font customization
-                    <br> Step 5 : Click on generate badges to generate badge
-                    <br>
-                </p>
+                <h2 class="ui center aligned header welcome-text">
+                    Welcome {{user.username}}
+                    <div class="sub header">
+                        Let's create some awesome badges
+                    </div>
+                </h2>
             </div>
             <div class="row">
-                <button class="ui button blue" {{action 'dismissOverlay'}}>Click to Dismiss</button>
+                <h4 class="ui center aligned header welcome-text">
+                    Please follow steps mentioned below to create badges
+                </h4>
+            </div>
+            <div class="row">
+                <ul class="ui list" style="text-align: left;">
+                    <li>
+                        Select from one of the Input Source
+                    </li>
+                    <li>
+                        Select Badge Size
+                    </li>
+                    <li>
+                        Select from one of the Background source
+                    </li>
+                    <li>
+                        Choose Font customization
+                    </li>
+                    <li>
+                        Click on Create badges
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <button class="ui basic orange button" {{action 'dismissOverlay'}}>Dismiss</button>
             </div>
         </div>
     </div>
